# LiteLogCpp

./: CMakeLists.txt  README.md  README_EN.md  README_ZH.md
src/: LiteLog.hpp  Samples.cpp
